--- a/rootdir/etc/init.device.rc
+++ b/rootdir/etc/init.device.rc
@@ -12,6 +12,9 @@ on init && property:ro.boot.radio=APAC
 on init && property:ro.boot.radio=EMEA
     setprop ro.boot.product.hardware.sku n
 
+on init && property:ro.boot.product.hardware.sku=n
+    enable vendor.nfc_hal_service
+
     # Variant properties
 on property:ro.boot.radio=APAC
     setprop ro.hw.ecompass false
@@ -33,6 +36,12 @@ on boot
     chown system oem_5004 /sys/bus/spi/devices/spi1.0/irq
     chown system oem_5004 /sys/bus/spi/devices/spi1.0/irq_cnt
     chmod 0440 /sys/bus/spi/devices/spi1.0/irq_cnt
+
+service vendor.nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service
+    class hal
+    user nfc
+    group nfc
+    disabled
 
 service vendor.sensors.qti /vendor/bin/sensors.qti
     class core
